--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 
   <!-- The app-fortune-cookie component -->
   <app-fortune-cookie></app-fortune-cookie>
+  <app-hello-world></app-hello-world>
 </div>
