fortune cookie component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <h1>Welcome to the Fortune Cookie App!</h1>
 
   <!-- The app-fortune-cookie component -->
-  <app-fortune-cookie></app-fortune-cookie>
+  <app-fortune-landing></app-fortune-landing>
   <!-- <app-hello-world></app-hello-world> -->
 </div>
