--- a/src/app/fortune-landing/fortune-landing.component.html
+++ b/src/app/fortune-landing/fortune-landing.component.html
@@ -8,7 +8,7 @@
       <p><strong>{{ fortune }}</strong></p>
       <div class="fortune-btn-container">
         <button>Save Fortune</button>
-        <button>Crack Another</button>
+        <button (click)="reset()">Reset</button>
       </div>
     </div>
   </div>
