--- a/src/app/fortune-landing/fortune-landing.component.html
+++ b/src/app/fortune-landing/fortune-landing.component.html
@@ -7,7 +7,7 @@
       <p>Your Fortune: </p>
       <p><strong>{{ fortune }}</strong></p>
       <div class="fortune-btn-container">
-        <button>Save Fortune</button>
+        <button (click)="saveFortune()">Save Fortune</button>
         <button (click)="reset()">Reset</button>
       </div>
     </div>
