--- a/src/app/fortune-landing/fortune-landing.component.html
+++ b/src/app/fortune-landing/fortune-landing.component.html
@@ -11,5 +11,9 @@
         <button (click)="reset()">Reset</button>
       </div>
     </div>
+
+    <div *ngIf="savedFortunes">
+      <li *ngFor="let fortune of savedFortunes">{{ fortune }}</li>
+    </div>
   </div>
   
