--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div style="text-align:center">
   <h1>Welcome to the Fortune Cookie App!</h1>
 
-  <!-- The app-fortune-cookie component -->
-  <app-fortune-landing></app-fortune-landing>
-  <!-- <app-hello-world></app-hello-world> -->
+
+  <app-fortune-landing *ngIf="User"></app-fortune-landing>
 </div>
