--- a/src/app/user-login/user-login.component.scss
+++ b/src/app/user-login/user-login.component.scss
@@ -1,6 +1,6 @@
-/* sign-up.component.css */
+/* login.component.css */
 
-.sign-up-container {
+.login-container {
     width: 300px;
     margin: 0 auto;
     padding: 20px;
@@ -47,7 +47,7 @@
     text-align: center;
   }
   
-  .login-link {
+  .signup-link {
     text-align: center;
     margin-top: 10px;
   }
